# cpp_boilerplate

./: readme.md  start.sh
args_quick/: .gitignore  CMakeLists.txt
args_quick/cmake/: args.in
args_quick/src/: main.cpp
cxxopts_quick/: .gitignore  CMakeLists.txt
cxxopts_quick/cmake/: cxxopts.in
cxxopts_quick/src/: main.cpp
empty/: CMakeLists.txt
empty/src/: main.cpp
